5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1716_2497.log
== TEST (2019-05-14 10:43:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t==tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t==tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:54:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = tempo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t*tempo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:58:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t==tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = 

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:05:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:05:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:06:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t==tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:08:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = tempo-1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
3.78795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
4.09321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
8.44703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
6.77386
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
10.143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
10.2515
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
8.08788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
5.6532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
2.59543
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo*t, 2)) # Exibicao de resultados

	

-- OUTPUT:
4367.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	

print(round(saldo,2))*t
# Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(round(saldo,2))*t
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:02:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:03:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:03:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.176014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.281471
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.306335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.186025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.364627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.472309
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.674448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.606492
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.700822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.304131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:05:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t += 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.140157
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.159206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.186921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.235705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.222927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.426243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.346792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:06:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t!=tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.310546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:07:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.142269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:08:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = t+1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.15084
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:09:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.137276
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:10:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.143592
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:11:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t<tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t+1
	print(round(saldo, 2)) # Exibicao de resultados
	

-- EXECUTION TIME:
0.20222
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
